authGet, authDelete, cookieName -> constants, contact upd, User interface
